fixed mobile layout issue in css file

--- a/index.css
+++ b/index.css
@@ -51,7 +51,7 @@ p {
     background-color: grey;
     color: white;
     text-align: center;
-    padding: 2em;
+    padding: 4em;
     margin-bottom: 9em;
 }
 
@@ -75,6 +75,8 @@ p {
 .projects-section {
     display: flex;
     flex-direction: column;
+    margin: auto;
+
     margin: 3em;
     margin-top: 9em;
     margin-bottom: 9em;
@@ -82,9 +84,8 @@ p {
 }
 
 .project-box {
-    /* width: 90%; */
     margin: auto;
-    padding: 5em;
+    padding: 4em;
     text-align: center;
 
 }
@@ -116,7 +117,7 @@ p {
     height: 25em;
     width: 50%;
     margin: auto;
-    padding: 3em;
+    padding: 2em;
     text-align: center;
 }
 
